# light-ray

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  SDL.hpp  build.sh  conanfile.txt  display.hpp  histogram.hpp  main.cpp  renderer.hpp  screenshot.sh  statistics.hpp  stopwatch.hpp  test.cpp
